# zynlibs

./: README.md  build.sh
jackpeak/: CMakeLists.txt  build.sh
zynseq/: CMakeLists.txt  triggers  zynseq.py
zynsmf/: CMakeLists.txt  zynsmf.py
